examples/k8stest/conf/EdgionTls/grpctls/Gateway.yaml
# EdgionTls gRPC TLS  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edgiontls-grpctls-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    # gRPC TLS  -  EdgionTls  TLS
    - name: grpctls
      protocol: HTTPS
      port: 31200
